--- a/estilo/css/topo.css
+++ b/estilo/css/topo.css
@@ -11,6 +11,9 @@
 }
 
 .topo {
+  margin-top: 0px;
+  padding-top: 0px;
+  top: 0px;
   max-width: 100%;
   min-height: 70rem;
   background-image: url("../imagens/Novo-Projeto-6-scaled.jpeg");
@@ -29,7 +32,7 @@
     min-height: 20rem;
     background-image: url("../imagens/Novo-Projeto-6-scaled.jpeg");
     background-repeat: no-repeat;
-    background-size: 150%;
+    background-size: 50rem;
     background-position: center;
   }
   .menu-logo{
