criada paginas dos grupos

--- a/estilo/css/pagina.css
+++ b/estilo/css/pagina.css
@@ -55,6 +55,17 @@
     height: 334px;
 }
 
+.link-sem-estilo, .link-sem-estilo:hover, .link-sem-estilo:link{
+    text-decoration:none; 
+    color: #000;
+}
+.cursos{
+    background-color: black;
+}
+.autodefesa{
+    background-color: black;
+    color: blanchedalmond;
+}
 @media (max-width: 600px){
     .container- {
         background-color: #fff;
