--- a/estilo/css/topo.css
+++ b/estilo/css/topo.css
@@ -5,7 +5,7 @@
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 6rem;
+  height: 15vh;
   transition: 0.4s;
   z-index: 100;
 }
@@ -22,8 +22,12 @@
 }
 
 .menu-logo {
-  width: 7rem;
-  height: 7rem;
+  width: 15vh;
+  height: 15vh;
+}
+
+.menu-esconder {
+  display: none;
 }
 
 @media (max-width: 600px){
